- [add] dark mode option added to BsdWorld urls in Web Image item
- [add] use command line option -cmasioconfig to add a new cmasio tab to audio setting. Remove old cmasio settings from the registry if you want to use this feature as they have moved. See notes in the tab
- [add] option in led indicator to stop tx if conditions met
- [change] when using [extended] Thetis will now allow tx anywhere. It will select the nearest band to the frequency you have selected and use that band info for bpf/lpfs. This will now permit power output on 8m for example. If you use this feature be aware of the out of band transmission possibilities and potential issues for the hardware
- [change] meter container borders have been reduced
- [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
- [change] containers no longer store/convert all skin meter images, only the ones required for that specific container. Considerable memory savings
- [change] filter setup form now stores/recalls location
- [change] Button actions processed more simply when G2 enabled (no shift action etc) - G8NJJ
- [change] rotator meter item now can be shown in az/ele/both mode. Requires you to remove-add the rotator if you were using it
- [change] can now have up to 50 multimeter containers
- [change] multimeter meter items are not limited. You can have unlimited in use at a time in a single container
- [change] midi micgain now is full range -40 to 10 (default mic gain)
- [change] midi comp is now full range 0-20
- [change] midi rit - now hold shift when turning for smaller change ~ -250 to 250
- [change] renamed the [HPF/BPF ByPass on PS] button in code so that a blanket default of ON will be applied everywhere to everyone. Change the setting if required
- [change] forced the bpfs bypass check to be on as default
- [change] simplification improvements to db import